==> RN8209C/RN8209C-SDK/src/rn8209c_user.c <==
#include "rn8209c_user.h"
#include "driver/gpio.h"
#include "driver/uart.h"
#include "rn8209_flash.h"
#include "led.h"
#include "cJSON.h"

static void s_rn8209c_uart_init(void)
{
    uart_config_t uart_config =
    {
        .baud_rate = 4800,
        .data_bits = UART_DATA_8_BITS,
        .parity    = UART_PARITY_EVEN,
        .stop_bits = UART_STOP_BITS_1,
        .flow_ctrl = UART_HW_FLOWCTRL_DISABLE
    };

 //   uart_driver_delete(UART_NUM_2);

    uart_param_config(UART_NUM_2, &uart_config);

    uart_set_pin(UART_NUM_2, GPIO_NUM_17, GPIO_NUM_18, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);

    uart_driver_install(UART_NUM_2, 256, 0, 0, NULL,0);

}

static void s_rn8209c_pin_restart(void)
{

#define GPIO_TX_PIN 17
#define GPIO_TX_PIN_SEL  ( 1ULL<<GPIO_TX_PIN)

    uart_driver_delete(UART_NUM_2);

    gpio_config_t io_conf;
    io_conf.intr_type = GPIO_INTR_DISABLE;
    io_conf.mode = GPIO_MODE_OUTPUT;
    io_conf.pin_bit_mask = GPIO_TX_PIN_SEL;
    io_conf.pull_down_en = 0;
    io_conf.pull_up_en = 0;
    gpio_config(&io_conf);


    gpio_set_level(GPIO_TX_PIN, 0);
    s_delay_ms(30);
    gpio_set_level(GPIO_TX_PIN, 1);

    s_rn8209c_uart_init();

}

static void calibrate_success_deal( )
{
	stu8209c_flash.param = stu8209c_user;
    	write_rn8209_param();
	LED_ALL_OFF;
	LED_BLUE_ON;
   //  rn8209c_debug("ku is %d,ki is %d,gpqa is %d,phsa id %d\n",stu8209c_user.param.Ku,stu8209c_user.param.Kia,stu8209c_user.param.GPQA,stu8209c_user.param.PhsA);
}

static void calibrate_false_deal( )
{
	LED_ALL_OFF;
	LED_RED_ON;
}

void calibrate_start_deal()
{
	LED_ALL_OFF;
	LED_PURPLE_ON;
}
