==> RN8209C/RN8209C-SDK/example_prj_52832/rn8209c_52832/moudle/rn8209c/rn8209c_user.c <==
#include "rn8209c_user.h"
#include "simulate_uart.h"
#include "rn8209_flash.h"
#include "key_led_relay.h"
#include "cJSON.h"
#include "utility.h"
#include "simple_uart.h"
#include "nrf_delay.h"
#include "system_time.h"

static void calibrate_success_deal( )
{
	stu8209c_flash.param = stu8209c_user;
    write_rn8209_param();
	set_led_state(LED_STATE_CALIBRATE_SUCCESS);
}

static void calibrate_false_deal( )
{
	set_led_state(LED_STATE_CALIBRATE_FALSE);
}

static void s_rn8209c_uart_init(void)
{
	simulate_uart_uinit();
	simulate_uart_init(4800,PARITY_EVEN);
}

static void s_rn8209c_pin_restart(void)
{

	#define GPIO_TX_PIN current_pin.rn8209c_tx
	nrf_gpio_cfg_output(GPIO_TX_PIN);

    nrf_gpio_pin_clear(GPIO_TX_PIN);
    s_delay_ms(30);
    nrf_gpio_pin_set(GPIO_TX_PIN);
    s_rn8209c_uart_init();

}

void calibrate_start_deal()
{
	set_led_state(LED_STATE_CALIBRATE_PROCESS);
}
